--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "postinstall": "(yarn install); (cd client && yarn install)",
+    "start": "concurrently \"yarn run server\" \"yarn run client\"",
+    "server": "node index.js",
+    "client": "cd client && yarn start"
   },
   "dependencies": {
+    "concurrently": "4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.20.1",
