--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "postinstall": "(yarn install); (cd client && yarn install)",
+    "postinstall": "(cd client && yarn install)",
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
     "server": "node index.js",
     "client": "cd client && yarn start"
