--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "homepage": "https://create-react-app-redux.now.sh",
+  "homepage": "http://github.com",
   "scripts": {
     "deploy": "now && now alias",
     "start": "react-scripts start",
@@ -11,21 +11,21 @@
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
-    "prettier": "1.18.2",
-    "react-scripts": "2.1.8"
+    "prettier": "^1.18.2",
+    "react-scripts": "^3.1.1"
   },
   "dependencies": {
     "antd": "^3.23.1",
-    "connected-react-router": "4.5.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-redux": "5.1.1",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
-    "redux": "4.0.4",
-    "redux-thunk": "2.3.0",
-    "sanitize.css": "7.0.3",
-    "serve": "10.1.2"
+    "connected-react-router": "^6.5.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "sanitize.css": "^11.0.0",
+    "serve": "^11.1.0"
   },
   "browserslist": [
     ">0.2%",
