--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "(cd client && yarn install)",
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
-    "server": "node index.js",
+    "server": "nodemon index.js",
     "client": "cd client && yarn start"
   },
   "dependencies": {
